[gd_scene load_steps=16 format=2]

[ext_resource path="res://resources/images/background/seabg1.png" type="Texture" id=1]
[ext_resource path="res://resources/images/background/seabg2.png" type="Texture" id=2]
[ext_resource path="res://scripts/Background.gd" type="Script" id=3]
[ext_resource path="res://scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://scenes/game/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/fonts/PressStart2PRegular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://resources/themes/MenuButtonTheme.tres" type="Theme" id=7]
[ext_resource path="res://scripts/ui/ButtonPause.gd" type="Script" id=8]

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0.181818, 0.466667, 0.684848, 0.927273 )
colors = PoolColorArray( 1, 1, 1, 1, 0.0705882, 0.705882, 0.752941, 1, 0.0705882, 0.705882, 0.752941, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 5
emission_ring_radius = 0.01
emission_ring_inner_radius = 9.62
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
gravity = Vector3( 0, -150, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
color_ramp = SubResource( 14 )

[sub_resource type="DynamicFont" id=1]
size = 70
outline_color = Color( 0.0196078, 0, 0.270588, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=15]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=17]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Background1" type="Sprite" parent="."]
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
centered = false
script = ExtResource( 3 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 1600, 0 )
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
centered = false
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 206, 34 )
gravity = 800

[node name="WaterBottom" type="Particles2D" parent="."]
pause_mode = 2
visible = false
position = Vector2( 201, 820 )
rotation = 1.5708
scale = Vector2( 4, 7 )
amount = 1400
lifetime = 0.5
speed_scale = 1.5
randomness = 1.0
visibility_rect = Rect2( -25, -25, 50, 50 )
local_coords = false
process_material = SubResource( 13 )

[node name="TimerEnemies" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="TimerGame" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="TimerScore" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="LabelScore" type="Label" parent="."]
margin_left = 948.0
margin_top = 19.0
margin_right = 1571.0
margin_bottom = 162.0
custom_colors/font_color = Color( 0.207843, 0.235294, 0.658824, 1 )
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 2
clip_text = true

[node name="ButtonPause" type="Button" parent="."]
pause_mode = 2
margin_left = 10.0
margin_top = 11.0
margin_right = 108.0
margin_bottom = 74.0
focus_mode = 0
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 15 )
text = "||"
script = ExtResource( 8 )

[node name="ButtonResume" type="Button" parent="ButtonPause"]
pause_mode = 2
visible = false
margin_left = 457.0
margin_top = 383.0
margin_right = 1080.0
margin_bottom = 487.0
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 16 )
text = "Continuar"

[node name="ButtonMenu" type="Button" parent="ButtonPause"]
pause_mode = 2
visible = false
margin_left = 454.0
margin_top = 500.0
margin_right = 1080.0
margin_bottom = 604.0
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 16 )
text = "Menu principal"

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 0, 92 )
scale = Vector2( 80, 40 )
shape = SubResource( 17 )
passby_press = true
action = "Right"

[connection signal="timeout" from="TimerEnemies" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerGame" to="." method="_on_TimerGame_timeout"]
[connection signal="timeout" from="TimerGame" to="Background1" method="_on_TimerGame_timeout"]
[connection signal="timeout" from="TimerGame" to="Background2" method="_on_TimerGame_timeout"]
[connection signal="timeout" from="TimerGame" to="Player" method="_on_TimerGame_timeout"]
[connection signal="timeout" from="TimerScore" to="." method="_on_TimerScore_timeout"]
[connection signal="pressed" from="ButtonPause" to="ButtonPause" method="_on_ButtonPause_pressed"]
[connection signal="pressed" from="ButtonPause/ButtonResume" to="ButtonPause" method="_on_ButtonResume_pressed"]
[connection signal="pressed" from="ButtonPause/ButtonMenu" to="ButtonPause" method="_on_ButtonMenu_pressed"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
